styling and added pages and video links

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Anizoey</title>
+    <title>About</title>
     <link rel="stylesheet" href="Styles/main.css">
 
     <!-- Latest compiled and minified CSS -->
@@ -25,41 +25,34 @@
 
       <nav>
         <ul>
-          <li>Home</li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li>About</li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
 
-      <div class="row">
+      <h2>About</h2>
+        <p>
+        Can't you see he's the man, let me hear you applaud
+        he is more than a man he's a shiny golden god.
 
-        <div class="colBGone col-sm-4">
-          Kodama
-          <a href="https://www.youtube.com/watch?v=pVewmffYft4">
-            <img src="http://img.youtube.com/vi/pVewmffYft4/0.jpg"
-            class="img-responsive"
-          </a>
-        </div>
-        <div class="colBGtwo col-sm-4">
-          The Pit
-          <a href="https://www.youtube.com/watch?v=p77t8nMBP6M">
-            <img src="http://img.youtube.com/vi/p77t8nMBP6M/0.jpg"
-            class="img-responsive"
-            </a>
-        </div>
-        <div class="colBGone col-sm-4">
-          Dog
-          <a href="https://www.youtube.com/watch?v=GkshA0-SLxg">
-            <img src="http://img.youtube.com/vi/GkshA0-SLxg/0.jpg"
-            class="img-responsive"
-          </a>
-        </div>
-      </div>
+        If you think it's time to fucking rock, and fucking roll, out of control,
+        well then you know you got to rock the block,
+        and fucking suck my fucking cock,
+        'cause when you rule, you fucking school all of the fools, out of their jewels,
+        'cause if you think it's time,
+        if you think it's time,
+        if you think it's time to fucking rock.
 
+        He is going to kick your fucking ass,
+        and you know his name is Kyle Gass,
+        rocking and fucking rolling,
+        and fucking rocking,
+        and fucking rolling,
+        and fucking...
+        </p>
       <footer>&copy Zubi Entertainment</footer>
     </div>
-
-
 
     <!-- Latest compiled and minified JavaScript -->
     <script
@@ -68,5 +61,4 @@
     crossorigin="anonymous"></script>
 
   </body>
-
 </html>
