--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Anizoey</title>
+    <title>About</title>
     <link rel="stylesheet" href="Styles/main.css">
 
     <!-- Latest compiled and minified CSS -->
@@ -25,41 +25,17 @@
 
       <nav>
         <ul>
-          <li>Home</li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>Contact</li>
         </ul>
       </nav>
 
-      <div class="row">
+      <h2>Contact</h2>
 
-        <div class="colBGone col-sm-4">
-          Kodama
-          <a href="https://www.youtube.com/watch?v=pVewmffYft4">
-            <img src="http://img.youtube.com/vi/pVewmffYft4/0.jpg"
-            class="img-responsive"
-          </a>
-        </div>
-        <div class="colBGtwo col-sm-4">
-          The Pit
-          <a href="https://www.youtube.com/watch?v=p77t8nMBP6M">
-            <img src="http://img.youtube.com/vi/p77t8nMBP6M/0.jpg"
-            class="img-responsive"
-            </a>
-        </div>
-        <div class="colBGone col-sm-4">
-          Dog
-          <a href="https://www.youtube.com/watch?v=GkshA0-SLxg">
-            <img src="http://img.youtube.com/vi/GkshA0-SLxg/0.jpg"
-            class="img-responsive"
-          </a>
-        </div>
-      </div>
-
+      Dont!
       <footer>&copy Zubi Entertainment</footer>
     </div>
-
-
 
     <!-- Latest compiled and minified JavaScript -->
     <script
@@ -68,5 +44,4 @@
     crossorigin="anonymous"></script>
 
   </body>
-
 </html>
