modal popup failed attempt :(

--- a/index.html
+++ b/index.html
@@ -37,22 +37,37 @@
           Kodama
           <a href="https://www.youtube.com/watch?v=pVewmffYft4">
             <img src="http://img.youtube.com/vi/pVewmffYft4/0.jpg"
-            class="img-responsive"
+            class="img-responsive">
           </a>
         </div>
         <div class="colBGtwo col-sm-4">
           The Pit
           <a href="https://www.youtube.com/watch?v=p77t8nMBP6M">
             <img src="http://img.youtube.com/vi/p77t8nMBP6M/0.jpg"
-            class="img-responsive"
+            class="img-responsive">
             </a>
         </div>
         <div class="colBGone col-sm-4">
           Dog
           <a href="https://www.youtube.com/watch?v=GkshA0-SLxg">
             <img src="http://img.youtube.com/vi/GkshA0-SLxg/0.jpg"
-            class="img-responsive"
+            class="img-responsive">
           </a>
+        </div>
+      </div>
+
+      <div class="container">
+        <button type="button" class="btn btn-primary"
+          data-toggle="modal" data-target="#modal-1">Activate the modal</button>
+        <div class="modal" id="modal-1">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button class="button" type="close" data-dismiss="modal">&times;</button>
+                <h3 class="modal-title">This is the heading</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
